sequence alignments end point first draft